ZON-2057: remove logout link, adjust styling

--- a/sass/web.site/modules/comments/_comment-form.sass
+++ b/sass/web.site/modules/comments/_comment-form.sass
@@ -16,10 +16,17 @@
 		width: remify(36px)
 		vertical-align: middle
 		overflow: hidden
+	&__header
+		display: flex
+		flex-wrap: wrap
 	&__text
 		color: $zon_grey
 		font-size: remify(14px)
+		line-height: remify(36px)
 		margin: 1em 0
+	&__charcount
+		float: right
+		margin-left: 3rem
 	&__username
 		+link
 			color: $zon-red
@@ -37,7 +44,7 @@
 		+on-interaction
 			color: $color-link--hover
 	&__textarea
-		margin: 1em 0
+		margin: 0 0 1em
 		height: 16em
 
 	&__input
