--- a/sass/web.site/screen.sass
+++ b/sass/web.site/screen.sass
@@ -109,6 +109,7 @@
 @import "modules/comments/comment-section"
 @import "modules/comments/comment-preferences"
 @import "modules/comments/comment-form"
+@import "modules/comments/comment-meta"
 @import "modules/comments/comment"
 
 // gallery
