ZON-2076: modify paginated h1

--- a/sass/web.site/modules/article/_article.sass
+++ b/sass/web.site/modules/article/_article.sass
@@ -50,10 +50,12 @@
 
 .summary,
 .byline,
-.article__page-teaser
+.article__page-teaser,
+.article__page-teaser > h1
 	color: $grey--mid
 	font-size: remify(18px)
 	line-height: 1.4
+	display: inline
 	margin-bottom: remify($petite--px)
 	+respond-min($break-tablet-min)
 		line-height: 1.5
