--- a/src/zeit/web/site/templates/content.html
+++ b/src/zeit/web/site/templates/content.html
@@ -34,7 +34,7 @@
             <div class="article__item">
                 {% if view.pagination and view.pagination.current > 1 %}
                 <div class="article__page-teaser">
-                    Seite {{ view.pagination.current }}/{{ view.pagination.total }}: {{ view.current_page.teaser }}
+                    Seite {{ view.pagination.current }}/{{ view.pagination.total }}: <h1>{{ view.current_page.teaser }}</h1>
                 </div>
                 {% else %}
                 <div class="summary" itemprop="description">
