--- a/sass/web.site/modules/article/_article.sass
+++ b/sass/web.site/modules/article/_article.sass
@@ -55,12 +55,15 @@
 	color: $grey--mid
 	font-size: remify(18px)
 	line-height: 1.4
-	display: inline
 	margin-bottom: remify($petite--px)
 	+respond-min($break-tablet-min)
 		line-height: 1.5
 	+respond-min($break-desktop-min)
 		font-size: remify(20px)
+	& > h1
+		margin: 0
+		display: inline
+		font-weight: normal
 
 .byline
 	margin-bottom: remify(30px)
