ZON-2058: Restructure comment metadata
if you have a hammer everything looks like a flexbox.

--- a/sass/web.site/modules/comments/_comment-meta.sass
+++ b/sass/web.site/modules/comments/_comment-meta.sass
@@ -3,42 +3,83 @@
 	+flex-wrap(wrap)
 	+justify-content(space-between)
 	&__badge
+		line-height: 1
 		&--promoted
-			color: #999
+			color: $zon_mid_grey
 			margin-bottom: remify(20px)
+			+respond-min($break-tablet-min)
+				+order(3)
+				+align-self(center)
+				margin-left: remify(20px)
+				margin-bottom: 0
+				text-align: right
 		&--recommended
 			+order(2)
-			color: #999
-			margin-top: -2px
+			color: $zon_mid_grey
+			margin-top: em(7px) // em intended
+			+respond-min($break-tablet-min)
+				margin-top: 0
+				margin-left: remify(20px)
+				+align-self(center)
 			// different placement if comment is promoted and recommended
 			.comment-meta__badge--promoted + &
 				+order(initial)
 				margin-top: 0
+				+respond-min($break-tablet-min)
+					+order(2)
 	&__icon-promoted
+		color: $zon_grey
 		fill: #fff
 		height: em(16px) // em intended
 		vertical-align: em(-3px) // em intended
 		width: em(16px)  // em intended
 	&__icon-recommended
-		height: em(16px) // em intended
-		vertical-align: text-bottom
-		width: em(16px)  // em intended
-	&__user
-		width: 80%
+		color: $zon_grey
+		height: em(18px) // em intended
+		vertical-align: em(-3px)
+		width: em(18px)  // em intended
 	&__text
 		color: $zon_grey
 		font-size: remify(12px)
 		letter-spacing: $zon-letter-spacing-s
 		padding-left: remify(2px)
+
+$user-avatar-size: 50px
+.comment-metadata
+	+display-flex()
+	+flex-basis(80%) // leave place for lonely star
+	+align-items(center)
+	line-height: 1.2
+	&__container
+		+display-flex()
+		+flex-direction(column)
+		line-height: 1.4
+		+respond-min($break-tablet-min)
+			+flex-grow(1)
+			+flex-direction(row)
+			+justify-content(space-between)
+			+align-items(center)
+			.comment--indented &
+				+flex-direction(column)
+				+align-items(flex-start)
 	&__avatar
+		+flex-basis(remify($user-avatar-size))
 		border-radius: 50%
-		float: left
-		height: remify(50px)
+		height: remify($user-avatar-size)
 		margin-right: remify(20px)
 		overflow: hidden
-		width: remify(50px)
-	&__author
-	&__icon-author
+		width: remify($user-avatar-size)
+	&__user
+		+respond-min($break-tablet-min)
+			width: remify(240px)
+	&__icon-user
+		+inline-block
+		color: $zon-charcoal
+		fill: #fff
+		height: em(16px)
+		margin-right: remify(5px)
+		vertical-align: -0.2em
+		width: em(16px)
 	&__name
 		+link
 			color: $zon-red
@@ -53,3 +94,6 @@
 			color: $zon_dark_grey
 		font-size: remify(12px)
 		letter-spacing: $zon-letter-spacing-s
+	+respond-min($break-tablet-min)
+		+flex-basis(auto)
+		+flex-grow(1)
