--- a/src/zeit/web/site/templates/layout.html
+++ b/src/zeit/web/site/templates/layout.html
@@ -33,6 +33,19 @@
     {% if view.syndication_source -%}
         <meta name="syndication-source" href="{{ view.syndication_source }}">
     {% endif -%}
+    <meta http-equiv="x-dns-prefetch-control" content="on">
+    <link rel="dns-prefetch" href="//scripts.zeit.de">
+    <link rel="dns-prefetch" href="//css.zeit.de">
+    <link rel="dns-prefetch" href="//js.zeit.de">
+    <link rel="dns-prefetch" href="//images.zeit.de">
+    <link rel="dns-prefetch" href="//static.zeit.de">
+    <link rel="dns-prefetch" href="//de.ioam.de">
+    <link rel="dns-prefetch" href="//s62.mxcdn.net">
+    <link rel="dns-prefetch" href="//s62.research.de.com">
+    <link rel="dns-prefetch" href="//www.googletagmanager.com">
+    <link rel="dns-prefetch" href="//zeit01.webtrekk.net">
+    <link rel="dns-prefetch" href="//www.google-analytics.com">
+    <link rel="dns-prefetch" href="//securepubads.g.doubleclick.net">
     <link rel="shortcut icon" href="http://images.zeit.de/static/img/favicon.ico">
     <link rel="apple-touch-icon-precomposed" href="http://images.zeit.de/static/img/ZO-ipad-114x114.png">
     <link rel="alternate" type="application/rss+xml" href="http://newsfeed.zeit.de/index">
