ZON-2058: And now we have mobile last

--- a/sass/web.site/modules/comments/_comment-meta.sass
+++ b/sass/web.site/modules/comments/_comment-meta.sass
@@ -5,28 +5,49 @@ $user-avatar-size: 50px
 	letter-spacing: $zon-letter-spacing-s
 
 .comment-meta
+	position: relative
+	.comment--promoted &
+		padding-top: remify(45px)
+		+respond-min($break-tablet-min)
+			padding-top: 0
 	&__avatar
+		float: left
+		margin-right: remify(15px)
+		margin-top: remify(-5px)
 		img
 			border-radius: 50%
+			display: block
 			height: remify($user-avatar-size)
 			overflow: hidden
 			width: remify($user-avatar-size)
 		+respond-min($break-tablet-min)
 			display: table-cell
-			vertical-align: middle
+			float: none
+			margin: 0
 			padding-right: remify(15px)
+			vertical-align: middle
 			width: remify($user-avatar-size)
 	&__name
 		font-size: remify(16px)
 		font-weight: bold
+		line-height: 1.2
+		overflow: hidden
+		text-overflow: ellipsis
+		white-space: nowrap
 		a
 			+link
 				color: $zon-red
 			+on-interaction
 				text-decoration: underline
+		.comment--recommended:not(.comment--promoted) &
+			padding-right: remify(60px) // leave room for star
+			+respond-min($break-tablet-min)
+				padding-right: 0	
 		+respond-min($break-tablet-min)
 			display: table-cell
+			overflow: visible
 			vertical-align: middle
+			white-space: normal
 			word-break: break-word
 	&__date
 		+link
@@ -36,30 +57,41 @@ $user-avatar-size: 50px
 		@extend %meta-text
 		+respond-min($break-tablet-min)
 			display: table-cell
-			vertical-align: middle
 			padding-left: remify(5px)
 			text-align: right
+			vertical-align: middle
 			width: remify(145px)
 	&__badge
 		@extend %meta-text
 		&--promoted
+			left: 0
+			position: absolute
+			top: 0
 			+respond-min($break-tablet-min)
 				display: table-cell
-				vertical-align: middle
+				left: auto
 				padding-left: remify(22px)
+				position: static
 				text-align: right
+				top: auto
+				vertical-align: middle
 				width: remify(178px)
 		&--recommended
+			position: absolute
+			right: 0
+			top: 0
 			+respond-min($break-tablet-min)
 				display: table-cell
-				vertical-align: middle
 				padding-left: remify(5px)
+				position: static
+				right: auto
 				text-align: right
+				top: auto
+				vertical-align: middle
 				width: remify(70px)
 		&--author
-			+respond-min($break-tablet-min)
-				+inline-block(0.2em)
-				margin-right: remify(8px)
+			+inline-block(0.2em)
+			margin-right: remify(8px)
 	&__icon
 		color: $zon_grey
 		height: em(16px, 12px) // em indented
@@ -76,5 +108,3 @@ $user-avatar-size: 50px
 	+respond-min($break-tablet-min)
 		display: table
 		width: 100%
-		// height: $user-avatar-size
-		// line-height: $user-avatar-size
