ZON-1939: fix teaser padding on mobile

--- a/sass/web.site/modules/centerpage/_centerpage.sass
+++ b/sass/web.site/modules/centerpage/_centerpage.sass
@@ -50,7 +50,8 @@
 	&--topic
 		padding: 0
 		position: relative
-	&--newsticker
+	&--newsticker,
+	&--ranking
 		padding-left: $page-padding
 		padding-right: $page-padding
 
