ZON-1968: Some styling

--- a/sass/web.site/screen.sass
+++ b/sass/web.site/screen.sass
@@ -60,6 +60,7 @@
 @import "modules/centerpage/newsticker"
 @import "modules/centerpage/section-heading"
 @import "modules/centerpage/headerimage"
+@import "modules/centerpage/frame"
 @import "modules/centerpage/servicebox"
 @import "modules/centerpage/snapshot"
 
