FIX: prevent display of desktop ad on mobile
I tried to fix that before but made it completely wrong, as in the complete opposit of what i wanted to do. As a self punishment I wrote a test for it.

--- a/sass/web.site/modules/_adplaces.sass
+++ b/sass/web.site/modules/_adplaces.sass
@@ -104,6 +104,6 @@
 		padding: remify(30px 0)
 
 // Fix hillarious unusable ad extras by iqd
-+respond-min($break-mobile-ad-width)
++respond-max($break-mobile-ad-max-width)
 	body > #iqdSitebar
 		display: none
