ZON-1591: Restrict wrapper script to wrapped page

--- a/src/zeit/web/core/templates/inc/inline_js/app_wrapper.html
+++ b/src/zeit/web/core/templates/inc/inline_js/app_wrapper.html
@@ -1,5 +1,5 @@
 {# special javascript treatment for wrapper apps #}
-{# in a better world we expose this only to the app referrers #}
+{% if view.is_wrapped %}
 <script>
     window.wrapper = {
         // provide ressort if questioned
@@ -8,3 +8,4 @@
         }
     };
 </script>
+{% endif %}
