ZON-1591: Extend javascript library

--- a/src/zeit/web/core/templates/inc/inline_js/library.html
+++ b/src/zeit/web/core/templates/inc/inline_js/library.html
@@ -12,6 +12,13 @@
                 return this[key] ? this[key] : '';
             }
         },
+        {% if view.is_wrapped -%}
+        is_wrapped: true,
+        wrapped: {
+            client: /Android/i.test(navigator.userAgent) ? 'android' : 'ios',
+            ivwclient: this.client === 'android' ? 'aadzeion' : 'appzeion'
+        },
+        {% endif -%}
         clientWidth: Math.max( document.documentElement.clientWidth || 0, window.innerWidth || 0 ),
         mobileWidth: 768,
         maxWidth: 1280,
