--- a/src/zeit/web/core/templates/inc/tracking/webtrekk.html
+++ b/src/zeit/web/core/templates/inc/tracking/webtrekk.html
@@ -56,7 +56,7 @@
             9: "{{ view.banner_channel | lower }}", // Banner-Channel
             10: "{%- if view.context.advertising_enabled %}yes{% endif -%}", // Banner aktiv?
             11: "", // Fehler
-            12: window.ZMO.isMobileView() ? "mobile.site" : "desktop.site",
+            12: window.ZMO.getSiteParam('.site'),
             13: window.ZMO.breakpoint.getTrackingBreakpoint(),
             14: "{{ 'alt' if 'zeitmz' in view.banner_channel else 'neu'  }}"
         };
