ZON-1591: Hide ZMO header

--- a/src/zeit/web/magazin/templates/layout.html
+++ b/src/zeit/web/magazin/templates/layout.html
@@ -105,9 +105,11 @@
         {% endblock page_wrap_inner %}
 
                 {% profile %}
-
+                
                 {% block navigation %}
+                    {% if not view.is_wrapped %}
                     {{ lama.main_nav(view.context.main_nav_full_width, request) }}
+                    {% endif %}
                 {% endblock navigation %}
 
                 {% block adplace_billboard %}
