--- a/src/zeit/web/magazin/templates/layout.html
+++ b/src/zeit/web/magazin/templates/layout.html
@@ -204,7 +204,13 @@
         </script>
 
         <!-- handler for wrapper app modifications -->
-        {{lama_core.wrapper_handling( view )}}
+        {# TODO: delete else branch after app relaunch #}
+        {% if view.is_wrapped %}
+            {% include "zeit.web.core:templates/inc/inline_js/app_wrapper.html" ignore missing %}
+        {% else %}
+            {{lama_core.wrapper_handling( view )}}
+        {% endif %}
+
         {% if view.vgwort_url %}
         <!--start: vgwort-->
         <img src="{{ view.vgwort_url }}" width="1" height="1" alt="" id="vgwort_pixel" class="visually-hidden">
