ZON-1939: add hover effect

--- a/sass/web.site/modules/search/_search-form.sass
+++ b/sass/web.site/modules/search/_search-form.sass
@@ -22,7 +22,9 @@ $dropdown-width: remify(160px)
 		padding: remify(10px)
 		+flex-grow(1)
 		&:focus,
-		&:focus+.search-submit
+		&:hover,
+		&:focus+.search-submit,
+		&:hover+.search-submit
 			border-color: $zon_mid_grey
 		&:focus
 			background-color: $white
