Chnage light kicker color

--- a/sass/web.site/modules/teaser/_teaser-square.sass
+++ b/sass/web.site/modules/teaser/_teaser-square.sass
@@ -39,6 +39,7 @@ $layout: ".teaser-square"
 		color: $white
 		+teaser-image-text-shadow
 	&__kicker
+		color: $zon_lighter_grey
 		display: block
 		font-size: em(14px)
 		font-weight: normal
