Remove unused classes

--- a/sass/web.magazin/base/typography/_basics.sass
+++ b/sass/web.magazin/base/typography/_basics.sass
@@ -40,7 +40,7 @@ figure
     width: 100%
   .figure__caption, figcaption
     @extend %figcaption
-    @extend %font-s
+    font-size: $font-s
     margin-top: $small
   .figure__media--embed
     .figure__media--embed__wrap
