--- a/sass/web.magazin/base/_ads.sass
+++ b/sass/web.magazin/base/_ads.sass
@@ -2,7 +2,7 @@
   +inline-block
   &:before
     @extend %meta
-    @extend %font-xs
+    font-size: $font-xs
     content: "Anzeige"
     text-transform: uppercase
     display: block
