--- a/sass/web.magazin/modules/_longform.sass
+++ b/sass/web.magazin/modules/_longform.sass
@@ -1,4 +1,3 @@
-$longform-content-max-width: 615px
 $longform-inline-max-width: 920px
 $longform-image-caption-max-width: 695px
 $bp-adjust-horizontal-figures--1: 1120px
@@ -223,8 +222,8 @@ $longform-header-max-height: 1400px
         padding-top: $large
       &:last-child
         padding-bottom: $large
-      +respond-min($break-2)
-        min-width: $longform-content-max-width
+      +respond-min($break-2) // 720px
+        min-width: $longform-content-max-width // 615px - who needs this?
 
   .article__supertitle
     display: none
@@ -275,7 +274,7 @@ $longform-header-max-height: 1400px
   .is-constrained
     max-width: remify($longform-content-max-width)
     +respond-min($break-3)
-      max-width: remify($longform-content-max-width*1.13)
+      max-width: remify($longform-content-max-width--desktop)
 
   .figure-horizontal, .figure-horizontal--right
     max-width: remify($longform-inline-max-width)
