ZON-1592: Add styles for teaser label

--- a/sass/web.site/modules/teaser/_teaser.sass
+++ b/sass/web.site/modules/teaser/_teaser.sass
@@ -120,3 +120,9 @@
 		text-decoration: none
 	&:hover
 		border-bottom: 1px solid $zon_light_grey
+
+%teaser-label
+	color: $zon_mid_grey
+	font-size: remify(11px)
+	letter-spacing: remify(1px)
+	text-transform: uppercase
