--- a/src/zeit/web/site/templates/inc/meta/sharing.html
+++ b/src/zeit/web/site/templates/inc/meta/sharing.html
@@ -1,3 +1,4 @@
+{# Dedupe code with zmo:sharing_meta #}
 <meta name="twitter:card" content="{{ view.twitter_card_type }}">
 <meta name="twitter:site" content="@zeitonline">
 <meta name="twitter:creator" content="@zeitonline">
