ZON-1592: Add more styles

--- a/sass/web.site/modules/teaser/_teaser-small-minor.sass
+++ b/sass/web.site/modules/teaser/_teaser-small-minor.sass
@@ -37,3 +37,8 @@
 		@extend %teaser-datetime !optional
 	&__commentcount
 		@extend %teaser-commentcount
+	&__label
+		@extend %teaser-label
+		padding: remify(6px) 0
+		display: block
+		text-align: right
