--- a/sass/web.site/modules/teaser/_teaser.sass
+++ b/sass/web.site/modules/teaser/_teaser.sass
@@ -123,6 +123,11 @@
 
 %teaser-label
 	color: $zon_mid_grey
-	font-size: remify(11px)
+	font-size: remify(10px)
 	letter-spacing: remify(1px)
 	text-transform: uppercase
+	padding: remify(6px) 0
+	display: block
+	text-align: right
+	+respond-min($break-tablet-min)
+		text-align: left
