--- a/src/zeit/web/site/templates/layout.html
+++ b/src/zeit/web/site/templates/layout.html
@@ -92,6 +92,9 @@
     {% if view.is_dev_environment %}
     <script src="//localhost:35729/livereload.js"></script>
     {% endif %}
+    {% if view.has_card_stack %}
+        <esi:include src="http://www.zeit.de/cardstack-backend/stacks/esi/head" onerror="continue" />
+    {% endif %}
 </head>
 <body itemscope itemtype="http://schema.org/WebPage" data-page-type="{{ view.type }}"  data-unique-id="{{ view.context.uniqueId }}" data-adDeliveryType="{{ view.ad_delivery_type }}">
     {% include "zeit.web.core:templates/inc/tag-manager.html" %}
@@ -168,6 +171,9 @@
     <!--start: vgwort-->
     <img src="{{ view.vgwort_url }}" width="1" height="1" alt="" id="vgwort_pixel" class="visually-hidden">
     <!--end: vgwort-->
+    {% endif %}
+    {% if view.has_card_stack %}
+        <esi:include src="http://www.zeit.de/cardstack-backend/stacks/esi/scripts" onerror="continue" />
     {% endif %}
 </body>
 </html>
