ZON-1960: Fix ADC for ipad 1280 width switch

--- a/src/zeit/web/core/templates/inc/inline_js/library.html
+++ b/src/zeit/web/core/templates/inc/inline_js/library.html
@@ -41,6 +41,8 @@
             banner: 'width=1280',
             set: function( key ) {
                 this.meta.setAttribute( 'content', this[ key ] );
+                {# update clientWidth after swicth #}
+                ZMO.clientWidth = Math.max( document.documentElement.clientWidth || 0, window.innerWidth || 0 );
             },
             isLandscape: function() {
                 if ( window.matchMedia ) {
