ZON-1592: Add styles for teaser images in mobile view

--- a/sass/web.site/modules/teaser/_teaser-small-minor.sass
+++ b/sass/web.site/modules/teaser/_teaser-small-minor.sass
@@ -42,3 +42,5 @@
 		padding: remify(6px) 0
 		display: block
 		text-align: right
+	&--verlag &__media
+		@extend %teaser-small-media-verlag !optional
