--- a/sass/web.site/modules/teaser/_teaser-small.sass
+++ b/sass/web.site/modules/teaser/_teaser-small.sass
@@ -32,3 +32,5 @@
 		@extend %teaser-commentcount
 	&__label
 		@extend %teaser-label
+	&--verlag &__media
+		@extend %teaser-small-media-verlag !optional
