--- a/sass/web.site/modules/teaser/_teaser.sass
+++ b/sass/web.site/modules/teaser/_teaser.sass
@@ -28,6 +28,13 @@
 	+respond-min($break-desktop-min)
 		width: remify(250px+20px)
 
+%teaser-small-media-verlag
+	+respond-max($break-phablet-min)
+		display: block
+		margin-left: 0
+		margin-right: 0
+		margin-top: 0
+
 %teaser-small-container
 	vertical-align: top
 	+respond-min($break-phablet-min)
