--- a/sass/web.magazin/base/typography/_basics.sass
+++ b/sass/web.magazin/base/typography/_basics.sass
@@ -1,9 +1,8 @@
 // Opt-in Typography
-.copy, %copy
+%copy
   p, ul, ol
     +body-type-zoom
     margin: 0 auto $fine
-    max-width: remify($article-content-max-width)
 
   h1, h2, h3, h4, h5, h6
     margin-bottom: $thin
