--- a/sass/web.magazin/modules/_cp-teaser-leader.sass
+++ b/sass/web.magazin/modules/_cp-teaser-leader.sass
@@ -43,7 +43,7 @@ $cp_lead-full-video-max-width: em(1000px)
 	font-weight: bold
 	margin: 0 0 $tiny
 	font-size: $font-xl
-	line-height: $petite
+	line-height: 1.25
 	letter-spacing: $hair
 	+respond-min($break-0)
 		font-size: $font-xxl
@@ -52,12 +52,12 @@ $cp_lead-full-video-max-width: em(1000px)
 
 .cp_leader__subtitle
 	font-size: $font-m
-	line-height: $petite--px
+	line-height: 1.25
 	+respond-min($break-2)
 		font-size: $font-ml
 
 .cp_leader__supertitle
-	line-height: $medium
+	line-height: 2.25
 	font-size: $font-s
 	+respond-min($break-2)
 		font-size: $font-ml
