--- a/sass/web.site/_constants.sass
+++ b/sass/web.site/_constants.sass
@@ -12,10 +12,10 @@ $break-areas: $break-tablet-min
 // exclusively used by .mobile-hidden
 $break-mobile-max: em(767px)
 
-// letter-spacing (a half of a pixel)
-$zon-letter-spacing-l: 0.08em
-$zon-letter-spacing-m: 0.05em
-$zon-letter-spacing-s: 0.03em
+// letter-spacing
+$zon-letter-spacing-l: 0.08em // 1.28px
+$zon-letter-spacing-m: 0.05em // 0.8px
+$zon-letter-spacing-s: 0.03em // a half of a pixel
 
 @import "../constants"
 
